--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,10 @@ classifiers = [
 dynamic = ["dependencies", "optional-dependencies"]
 
 [tool.hatch.metadata.hooks.requirements_txt]
-files = ["requirements.txt"]
+files = ["requirements/minimal.txt"]
 
 
 [tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
-full = ["requirements/full.txt"]
+full = ["requirements.txt"]
 dev = ["requirements/dev.txt"]
 pandas = ["requirements/pandas.txt"]
