--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,6 @@ files = ["requirements/minimal.txt"]
 
 
 [tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
-full = ["requirements/full.txt"]
+full = ["requirements.txt"]
 dev = ["requirements/dev.txt"]
 pandas = ["requirements/pandas.txt"]
